; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm64/coresight/extr_coresight-funnel.c_funnel_disable.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm64/coresight/extr_coresight-funnel.c_funnel_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.endpoint = type { i32 }
%struct.coresight_event = type { i32 }
%struct.funnel_softc = type { i32 }

@FUNNEL_FUNCTL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.endpoint*, %struct.coresight_event*)* @funnel_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @funnel_disable(i32 %0, %struct.endpoint* %1, %struct.coresight_event* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.endpoint*, align 8
  %6 = alloca %struct.coresight_event*, align 8
  %7 = alloca %struct.funnel_softc*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store %struct.endpoint* %1, %struct.endpoint** %5, align 8
  store %struct.coresight_event* %2, %struct.coresight_event** %6, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.funnel_softc* @device_get_softc(i32 %9)
  store %struct.funnel_softc* %10, %struct.funnel_softc** %7, align 8
  %11 = load %struct.funnel_softc*, %struct.funnel_softc** %7, align 8
  %12 = getelementptr inbounds %struct.funnel_softc, %struct.funnel_softc* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @FUNNEL_FUNCTL, align 4
  %15 = call i32 @bus_read_4(i32 %13, i32 %14)
  store i32 %15, i32* %8, align 4
  %16 = load %struct.endpoint*, %struct.endpoint** %5, align 8
  %17 = getelementptr inbounds %struct.endpoint, %struct.endpoint* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = shl i32 1, %18
  %20 = xor i32 %19, -1
  %21 = load i32, i32* %8, align 4
  %22 = and i32 %21, %20
  store i32 %22, i32* %8, align 4
  %23 = load %struct.funnel_softc*, %struct.funnel_softc** %7, align 8
  %24 = getelementptr inbounds %struct.funnel_softc, %struct.funnel_softc* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @FUNNEL_FUNCTL, align 4
  %27 = load i32, i32* %8, align 4
  %28 = call i32 @bus_write_4(i32 %25, i32 %26, i32 %27)
  ret void
}

declare dso_local %struct.funnel_softc* @device_get_softc(i32) #1

declare dso_local i32 @bus_read_4(i32, i32) #1

declare dso_local i32 @bus_write_4(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
